# pro-ai-server-android-base

./: .gitignore  README.md  pyproject.toml
.agents/: README.md
.codex/: instructions.md
docs/: AGENT_WORKFLOWS.md  ANDROID_COMPATIBILITY.md  CLI_WORKFLOW.md  CODEX_MVP_BASELINE.md  CODE_INDEX.md  DEVSTACK_DEMO.md  DEVSTACK_OFFER.md  DEVSTACK_TRACKING.md  GATEWAY.md  INSTALLER_UI.md  LLAMA_CPP_WRAPPER_CONTRACT.md  NATIVE_RUNTIME_RESEARCH_NOTE.md  NEXT_MILESTONES.md  PHONE_RUNTIME_TRANSITION.md  PRODUCTION_RC.md  RELEASE.md  RESEARCH_PAUSE_SOP.md  TROUBLESHOOTING.md
embedded-tools/: README.md
scripts/: build-windows-exe.ps1  download-platform-tools.ps1  smoke-production-installer.ps1
tests/: test_adb.py  test_adb_device_selection.py  test_agent_autopilot.py  test_agent_context.py  test_agent_execution.py  test_agent_handoff.py  test_agent_improver.py  test_agent_planner.py  test_agent_prime.py  test_agent_queue.py  test_agent_reconciliation.py  test_agent_reporter.py  test_agent_session_archive.py  test_agent_sessions.py  test_agent_ticketizer.py  test_android_compatibility.py  test_android_optimization.py  test_cli_workflows.py  test_continue_config.py  test_device_scan.py  test_diagnostics.py  test_docs.py  test_gateway_config.py  test_gateway_health.py  test_gateway_inventory.py  test_gateway_models.py  test_gateway_ollama_client.py  test_gateway_proxy_routes.py  test_gateway_route_test.py  test_gateway_router.py  test_gateway_settings.py  test_hardware_scan.py  test_ide_detection.py  test_installer_ui.py  test_model_plan.py  test_native_android.py  (+18 more)
(+400 files in other folders)
