[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pro-ai-server"
version = "0.1.0"
description = "Turn an Android phone into a local AI server base for coding workflows and adaptive device installs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.5",
  "rich>=13.7.1",
  "PyYAML>=6.0.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "pyinstaller>=6.10.0"
]

[project.scripts]
pro-ai-server = "pro_ai_server.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pro_ai_server = ["embedded-tools/**", "*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
